Updated implementation of cancelBooking that checks that correct booking is used (remove + notification)